# Domino

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  set-env.sh
doc/: Doxyfile  start-simple-doc-server.sh
download_utils/: prepare_maestro.py  prepare_timeloop.py
include/: arch.h  block.h  expr.h  general_functor.h  general_visitor.h  ir_base.h  ir_functor.h  kernel.h  mutator.h  printer.h  ref.h  right_thread.h  simplify.h  stmt.h  transform.h  visitor.h
include/analysis/: bounds.h  fusion.h
include/codegen/: codegen.h  gen_arm_m.h  gen_base.h  gen_c.h  gen_tileflow.h
include/logging/: logging.h
include/pass/: flatten.h  prod_consum.h
include/type_system/: dtype.h
include/x_macro/: arch.x.h  bin_expr.x.h  block.x.h  expr.x.h  ir.x.h  kernel.x.h  stmt.x.h
python/: setup.py
python/base/: __init__.py  type_base.py
python/domino/: __init__.py  globals.py
python/domino/accelerator/: __init__.py  acc_generator.py  buffer.py  conv_acc.py  depthwise_acc.py  gemm_acc.py  mesh_soc.py  nvdla.py  pe.py  shidiannao.py  tpu.py
python/domino/analysis/: fusion.py
python/domino/base/: __init__.py  acc_base.py  dse_base.py  ir_base.py  pass_base.py
python/domino/codegen/: __init__.py  gen_arm_m.py  gen_c.py  gen_tileflow.py
python/domino/dse/: __init__.py  key.py  policy.py  space.py
python/domino/dse/spaces/: __init__.py  tile_space.py
python/domino/graph_ir/: __init__.py  graph.py  op.py  op_base.py  quantize.py  tensor.py
python/domino/graph_pass/: __init__.py  graph_pass.py  graph_printer.py  set_graph_precision.py
python/domino/passes/: __init__.py  flatten.py  prod_consum.py
python/domino/program_ir/: __init__.py  arch.py  block.py  dsl.py  functional.py  inferbound.py  ir_builder.py  kernel.py  scalar_expr.py  simplify.py  stmt.py
python/domino/runtime/: __init__.py  mbed.py  tileflow.py
python/domino/type_system/: __init__.py  dtype.py  ttype.py
python/domino/utils/: __init__.py  maestro_evaluator.py  mcunet-5fps_vww.tflite  onnx_convertor.py  tflite_convertor.py
python/graph_ir/: op.py  tensor.py
python/program_ir/: scalar_expr.py
python/type_system/: __init__.py  dtype.py  ttype.py
python/utils/: tflite_convertor.py
src/: ir_base.cc  ir_repr.cc  printer.cc  stmt.cc
src/domino/: arch.cc  block.cc  expr.cc  ir_replicate.cc  ir_repr.cc  kernel.cc  simplify.cc  transform.cc
src/domino/analysis/: bounds.cc  fusion.cc
src/domino/codegen/: gen_arm_m.cc  gen_c.cc  gen_tileflow.cc
src/domino/logging/: logging.cc
src/domino/pass/: flatten.cc  prod_consum.cc
src/domino/type_system/: dtype.cc
src/pybind/: ir_base_bind.cc  pybind.cc
test/cpp/: test_ir_repr.cc  test_print.cc  test_ref.cc
test/python/: .gitignore  test_graph_api.py  test_graph_convertor.py  test_graph_functor.py  test_layer_dataflow_mapping.py  test_maestro_evaluator.py  test_mapper.py  test_mix_precision_loader.py
test/python/dac-2023-chiplet-mapping-v1/: test_layer_dataflow_mapping.py
test/python/dac-2023-chiplet-mapping-v2/: readme.md  test_layer_dataflow_mapping.py
test/python/dac-2023-chiplet-mapping-v3/: readme.md  test_layer_dataflow_mapping.py
test/python/dac-2023-mapping-v1/: readme.md  test_layer_dataflow_mapping.py  test_mapper.py
test/python/dac-2023-soc-mapping-v1/: base.py  dp_mapper.py  evolution_mapper.py  formulation.md  h2h_mapper.py  performance.py  test_mapper.py  visualize.py
test/python/simplified_models/: bert_base.py  multi_layer_lstm.py
test/python/unitest/: test_arch.py  test_dsl_primitives.py  test_dsl_tensor_expression.py  test_dtype.py  test_expr.py  test_ir_builder.py  test_range.py  test_repr.py  test_set_operation.py  test_simplify.py  test_stmt.py
testing/bison/: .gitignore  Makefile  calculator.l  calculator.y
testing/flex/: .gitignore  flex_example.l  testfile.txt
testing/mculib/: .gitignore  CMakeLists.txt  main.cpp  set-env.sh
testing/mculib/include/: mem_access.h  pack_value.h
testing/mculib/include/matmul/: matmul_mma_m2n2k16.h  matmul_mma_m2n4k16.h
testing/mculib/include/mma/: mma_n2k4x.h
testing/mculib/python/mculib/: __init__.py  batch_matmul_chain.py  conv2d.py  data_process.py  gen_test_file.py  matmul.py  matmul_chain.py  mma.py  module.py  quantize.py  self_attention.py
testing/mculib/test/: test_matmul.cpp
testing/mculib/test/cpp/: test_matmul.cpp
testing/mculib/test/python/: test_gen_batch_matmul_chain_test_file.py  test_gen_conv2d3x3_test_file.py  test_gen_matmul_chain_test_file.py  test_gen_matmul_test_file.py  test_gen_self_attention_test_file.py  test_mbed_runtime_matmul.py  test_mbedrt_matmul.py  test_mbedrt_mlp_net_with_mem_reuse.py
testing/ptx/: ldmatrix.cu
testing/tileflow/: flat_dataflow.py  gemm_exp_gemm.py  gemm_exp_gemm_explore.py  self_attention.py  set-env.sh
testing/tileflow/python/tileflow/: __init__.py  accelerator.py  context.py  tuning.py  workload.py
testing/tileflow/test/: gemm_exp_gemm.py  gemm_exp_gemm_dse.py  gemm_exp_gemm_explore.py  self_attention.py
testing/tileflow/test/experiments/: README.md  chimera_self_attention.py  cmd_record.sh  conv_dataflow_l1_bw_profile.py  flat_dataflow.py  (+27 more)
(+153 files in other folders)
